AUTO_FILES("." "src" "\\.(cpp|h)$")
AUTO_FILES("${ROOT_SOURCE_DIR}/dep/libsundaowen" "src" "\\.(cpp|h)$")
AUTO_FILES("${ROOT_SOURCE_DIR}/dep/rapidjson/include" "src" "\\.h$")
include_directories(${DEP_INCLUDE_DIR})
link_directories(${DEP_LIBRARY_DIR})
add_definitions(-DSDW_MAIN -DCURL_STATICLIB)
if(APPLE)
  add_definitions(-DSDW_XCONVERT)
endif()
ADD_EXE(bucketpan "${src}")
if(WIN32)
  if(MSVC)
    if(MSVC_VERSION LESS 1800)
      set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /wd4005")
    endif()
    target_link_libraries(bucketpan libcurl libcrypto WS2_32 Wldap32 Crypt32)
    set(bucketpan_LINK_FLAGS_DEBUG "${bucketpan_LINK_FLAGS_DEBUG} /NODEFAULTLIB:LIBCMT")
    if(MSVC_VERSION GREATER 1700)
      set(bucketpan_LINK_FLAGS_DEBUG "${bucketpan_LINK_FLAGS_DEBUG} /IGNORE:4099")
      set(bucketpan_LINK_FLAGS_RELWITHDEBINFO "${bucketpan_LINK_FLAGS_RELWITHDEBINFO} /IGNORE:4099")
    endif()
    set_target_properties(bucketpan PROPERTIES
      LINK_FLAGS_DEBUG "${bucketpan_LINK_FLAGS_DEBUG}"
      LINK_FLAGS_RELWITHDEBINFO "${bucketpan_LINK_FLAGS_RELWITHDEBINFO}")
  else()
    target_link_libraries(bucketpan curl crypto)
  endif()
else()
  target_link_libraries(bucketpan curl ssl crypto)
  if(APPLE)
    target_link_libraries(bucketpan ldap)
  else()
    target_link_libraries(bucketpan pthread dl)
  endif()
  if(APPLE OR CYGWIN)
    target_link_libraries(bucketpan iconv)
  endif()
endif()
install(TARGETS bucketpan DESTINATION bin)
